# bazel-gba-example

./: .bazelrc  LICENSE.txt  README.md  WORKSPACE
bazel/: BUILD.bazel  copts.bzl
platform/: BUILD.bazel  README.md  cc_toolchain_config.bzl  defs.bzl  devkitarm.bazel  gba.specs  libgba.bazel  libtonc.bazel  repo.bzl
source/: BUILD.bazel  main.c
tools/: go.mod
tools/makerom/: .gitignore  BUILD.bazel  makerom.go
tools/romimage/: BUILD.bazel  romimage.go
