load("@rules_cc//cc:defs.bzl", "cc_import", "cc_library")

cc_import(
    name = "libgba_static",
    static_library = "lib/libgba.a",
)

cc_library(
    name = "libgba",
    hdrs = glob(["include/*.h"]),
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [":libgba_static"],
)
